--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
 
       <div>
-        <h1><a href="countries/world.html">World Knowledge!</a></h1>
+        <h1><a href="Countries/world.html">World Knowledge!</a></h1>
       </div>
     </header>
     <main>
@@ -39,7 +39,7 @@
         </header>
 
         <div class="grid">
-          <a href="countries/example.html">
+          <a href="Countries/example.html">
             <div class="card">
               <p>Country example</p>
             </div>
