--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="grid">
           <a href="Countries/example.html">
             <div class="card">
-              <p>Country example</p>
+              <p>Clickable Country example</p>
             </div>
           </a>
           <a href="">
