--- a/Countries/example.html
+++ b/Countries/example.html
@@ -98,12 +98,12 @@
 
       <ul>
         <li>
-          <a href="https://www.heritage.org" target="_blank"
-            >Heritage.org</a
+          <a href="#" target="_blank"
+            >Example source 1</a
           >
         </li>
-        <li><a href="https://data.oecd.org" target="_blank">Data OECD</a></li>
-        <li><a href="https://oec.world" target="_blank">OEC World</a></li>
+        <li><a href="#" target="_blank">Example source 2</a></li>
+        <li><a href="#" target="_blank">Example source 3</a></li>
       </ul>
     </footer>
     <script src="countryScripts.js"></script>
