--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <nav id="nav">
+      <nav>
         <a href="#section1"
           ><div><p>Section 1 Link</p></div></a
         >
@@ -29,7 +29,7 @@
       </nav>
 
       <div>
-        <h1><a href="Countries/world.html">World Knowledge!</a></h1>
+        <h1><a href="countries/world.html">World Knowledge!</a></h1>
       </div>
     </header>
     <main>
@@ -39,9 +39,9 @@
         </header>
 
         <div class="grid">
-          <a href="Countries/example.html">
+          <a href="countries/example.html">
             <div class="card">
-              <p>Clickable Country example</p>
+              <p>Country example</p>
             </div>
           </a>
           <a href="">
@@ -215,3 +215,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
