--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
 
       <div>
-        <h1><a href="countries/world.html">World Knowledge!</a></h1>
+        <h1><a href="Countries/world.html">World Knowledge!</a></h1>
       </div>
     </header>
     <main>
