--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
 
         <div class="grid">
-          <a href="countries/example.html">
+          <a href="Countries/example.html">
             <div class="card">
               <p>Country example</p>
             </div>
